--- a/assets/l10n/app_en.arb
+++ b/assets/l10n/app_en.arb
@@ -16,12 +16,12 @@
   "filter_course_page_label" : "Select the teachings you want to see",
 
 
+  "today_label": "Today",
+  "calendar_label": "Calendar",
   "error_generic": "Something went wrong!",
   "error_connection": "It is not possible to connect to the server at this time.\nThe connection was lost",
-  "hello_world": "Hello world!",
-  "@hello_world": {
-    "description": "The hello world label"
-  },
+
+
   "settings_app": "App",
   "settings_dark_mode": "Dark Mode",
 
@@ -37,5 +37,10 @@
   "modules_saved_dialog" : "Changes applied successfully",
   "exit_dialog_text":  "Are you sure you want to quit?\nAll unconfirmed changes will be lost",
   "confirm_dialog": "Confirm",
-  "go_back_dialog": "Back"
+  "go_back_dialog": "Back",
+
+  "hours_label" : "hours",
+  "degree_label" : "degree",
+  "teacher_label" : "teacher",
+  "classroom_label" : "classroom"
 }
