--- a/assets/l10n/app_en.arb
+++ b/assets/l10n/app_en.arb
@@ -35,6 +35,11 @@
   "settings_reset" : "Reset App",
   "settings_manage_courses" : "Manage Courses",
   "settings_filter" : "Filter lessons",
+  "settings_credits" : "Credits",
+  "settings_credits_social_desc" : "Would you like to stay updated on the latest news or help us out? You can find us here",
+  "settings_credits_desc" : "UniTime is an project created by Andrei Lazar & Lorenzo Bonanni.",
+  "settings_credits_desc_copyright" : "The UniTime app is an open-source project under the GPL-3.0 license, which means that its source code is publicly available and can be used freely under the terms of the license. This demonstrates our commitment to providing innovative and accessible solutions to the global community.",
+  "settings_credits_donation" : "Do you like this project? Support us by buying us a coffee.",
   "modules_saved_dialog" : "Changes applied successfully",
   "exit_dialog_text":  "Are you sure you want to quit?\nAll unconfirmed changes will be lost",
   "confirm_dialog": "Confirm",
