--- a/assets/l10n/app_it.arb
+++ b/assets/l10n/app_it.arb
@@ -32,6 +32,11 @@
   "settings_reset" : "Resetta App",
   "settings_manage_courses" : "Gestisci Corsi",
   "settings_filter" : "Filtra lezioni",
+  "settings_credits" : "Crediti",
+  "settings_credits_social_desc" : "Vuoi rimanere aggiornato sulle ultime novità o aiutarci? Puoi trovarci qui.",
+  "settings_credits_desc" : "UniTime è un progetto creato da Andrei Lazar e Lorenzo Bonanni.",
+  "settings_credits_desc_copyright" : "L'app UniTime è un progetto open-source con licenza GPL-3.0, il che significa che il codice sorgente è disponibile pubblicamente e può essere utilizzato liberamente secondo i termini della licenza. Questo dimostra il nostro impegno a fornire soluzioni innovative e accessibili alla comunità globale",
+  "settings_credits_donation" : "Ti piace questo progetto? Sostienilo offrendoci un caffè.",
   "modules_saved_dialog" : "Modifiche applicate con successo",
   "exit_dialog_text": "Sei sicuro di voler uscire?\nTutte le modifiche non confermate andranno perse",
   "confirm_dialog": "Conferma",
